# backend

./: .gitignore  pyproject.toml
articles/: models.py  permissions.py  serializers.py  urls.py  validators.py  views.py
articles/migrations/: 0001_initial.py  0002_alter_article_picture.py  0002_rename_user_article_author_alter_article_body_and_more.py  0003_alter_article_subheading_alter_article_title.py  0003_article_subheading_alter_article_body_and_more.py  0004_article_picture_alter_article_body_and_more.py  0005_alter_article_picture_alter_article_subheading_and_more.py  0006_alter_article_picture.py
backend/: pyproject.toml  settings.py  urls.py
tests/: test_models.py  test_urls.py
tests/articles/: test_urls.py
